# codereview-agent

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/versions/: 001_add_bot_comments_and_feedback.py
app/: __init__.py  config.py  github_auth.py  github_client.py  main.py  webhook.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  ast_summary.py  code_chunk.py  repo_config.py  review.py  review_context.py  static_findings.py  webhook_payloads.py
app/services/: __init__.py  ast_analyzer.py  code_chunker.py  config_loader.py  context_retriever.py  diff_parser.py  feedback_tracker.py  github_poster.py  pr_fetcher.py  repo_indexer.py  review_pipeline.py  reviewer.py  static_analyzer.py
app/workers/: __init__.py  review_worker.py
dashboard/: __init__.py  app.py  db.py  ui.py
dashboard/pages/: eval.py  feedback.py  overview.py
dashboard/views/: eval.py  feedback.py  overview.py
docs/: architecture.md  configuration.md
eval/: README.md  __init__.py  comment_matcher.py  historical_pr_fetcher.py  report_generator.py  run.py
eval_reports/: click_15.md  click_15_run1.md  click_15_run2.md  click_15_run3.md  click_5.md  click_5_v2.md  click_5_v3.md  click_5_v4.md  click_5_v5.md
tests/: __init__.py  conftest.py  test_github_auth.py  test_health.py  test_webhook.py
tests/dashboard/: __init__.py  test_db.py
tests/eval/: test_comment_matcher.py
tests/services/: __init__.py  (+11 more)
(+10 files in other folders)
